fix(*): fix test for JDK17